2013-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::bind): Fix check for AF_LOCAL
	filename length to allow non-NUL terminated strings within namelen
	bytes.  Copy over sun_path to local array sun_path to have a
	NUL-terminated string for subsequent function calls.  Move path_conv
	check before OS bind call to not bind the socket before being sure
	the file doesn't exist.  Add and fix comments.

2013-03-06  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_names): Add trailing NULL element to avoid potential
	SEGV in format_proc_filesystems.

2013-03-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (exception::handle): Eliminate buggy recursed variable;
	just check if we're exiting.

2013-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/pthread.h (pthread_atfork): Add missing declaration.

2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/error.h (error_message_count): Declare as dllimport.
	(error_one_per_line): Ditto.
	(error_print_progname): Ditto.

2013-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
	(class child_info_fork): Drop extraneous semicolon.

2013-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::bind): Fix error code for
	empty filename.

2013-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::bind): Fix length check of
	AF_LOCAL filename so it never accesses memory beyond namelen.  Also
	make sure filename is NUL-terminated.

2013-01-31  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* DevNotes: Add entry cgf-000022.
	* cygtls.h (_cygtls::func): Define as a sa_sigaction style function.
	* exceptions.cc (sig_handle_tty_stop): Ditto.
	(_cygtls::interrupt_setup): Fix coercion to accommodate 'func' change.
	(ctrl_c_handler): Use tty kill_pgrp to send a signal.
	(sigpacket::process): Don't process sigflush here.